--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^7.4.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "scrypt": "^6.0.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   },
