--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "scrypt": "^6.0.3",
