--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
@@ -24,9 +22,9 @@
     "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-plumber": "^1.2.0"
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3"
   }
 }
