--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/.bin/babel src/ -d lib/",
-    "start": "gulp"
+    "start": "gulp",
+    "lint": "tslint -p tsconfig.json -c tslint.json"
   },
   "author": "Bulat Kidasov <kidasov@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "io-ts": "^1.3.3",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
@@ -22,6 +24,12 @@
     "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
+    "@types/koa": "^2.0.46",
+    "@types/koa-bodyparser": "^5.0.1",
+    "@types/koa-router": "^7.0.32",
+    "@types/koa__cors": "^2.2.3",
+    "@types/scrypt": "^6.0.0",
+    "@types/sequelize": "^4.27.28",
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
     "tslint": "^5.11.0",
