--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "allowJs": true,
     "sourceMap": true,
     "outDir": "./lib",
     "rootDir": "./src",
-    "strict": true,
+    "strict": true
   },
-  "include": [
-    "./src"
-  ]
+  "include": ["./src"]
 }
