Implemented loading media files

--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "async-busboy": "^0.7.0",
     "io-ts": "^1.3.3",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
@@ -20,6 +21,7 @@
     "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "pg-large-object": "^2.0.0",
     "scrypt": "^6.0.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
@@ -33,6 +35,8 @@
     "@types/koa-router": "^7.0.32",
     "@types/koa__cors": "^2.2.3",
     "@types/node-fetch": "^2.1.2",
+    "@types/pg": "^7.4.11",
+    "@types/pg-large-object": "^2.0.1",
     "@types/scrypt": "^6.0.0",
     "@types/sequelize": "^4.27.28",
     "onchange": "^5.0.2",
