--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "moment": "^2.22.2",
     "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
@@ -34,6 +35,7 @@
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.32",
     "@types/koa__cors": "^2.2.3",
+    "@types/moment": "^2.13.0",
     "@types/node-fetch": "^2.1.2",
     "@types/pg": "^7.4.11",
     "@types/pg-large-object": "^2.0.1",
