--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      POSTGRES_PASSWORD: "example"
+      POSTGRES_PASSWORD: 'example'
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
