--- a/web/package.json
+++ b/web/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@material/switch": "^0.40.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.0",
     "moment": "^2.22.2",
+    "popper.js": "^1.15.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
