--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@fortawesome/angular-fontawesome": "0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@material/switch": "^0.40.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
