--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "npx react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
+    "final-form": "^4.18.5",
     "react": "16.9.0",
+    "react-final-form": "^6.3.0",
     "react-native": "0.61.2",
+    "react-native-elements": "^1.2.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10"
   },
   "devDependencies": {
