--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "moment": "^2.22.2",
+    "ngx-img-cropper": "^8.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.3",
     "zone.js": "^0.9.1"
