--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "babel-plugin-module-resolver": "^3.2.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "final-form": "^4.18.5",
     "react": "16.9.0",
     "react-final-form": "^6.3.0",
