--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,9 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@react-native-community/async-storage": "^1.7.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "final-form": "^4.18.5",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
+    "mobx-react-lite": "^1.5.2",
     "react": "16.9.0",
     "react-final-form": "^6.3.0",
     "react-native": "0.61.2",
