--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,15 +6,13 @@
     "android": "npx react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "lint": "eslint src --ext .ts,.tsx",
     "test": "jest"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/drawer": "^5.0.0-alpha.39",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
     "final-form": "^4.18.5",
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
@@ -34,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.18",
@@ -41,6 +40,11 @@
     "@types/react-native": "^0.60.17",
     "@types/react-test-renderer": "16.9.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0",
