--- a/mobile/.eslintrc.yml
+++ b/mobile/.eslintrc.yml
@@ -4,7 +4,7 @@ env:
 extends:
   - '@react-native-community'
   - 'plugin:@typescript-eslint/eslint-recommended'
-  - 'plugin:@typescript-eslint/recommended',
+  - 'plugin:@typescript-eslint/recommended'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
