Added custom fonts, added flatlist to events page

--- a/mobile/ios/mobile/Info.plist
+++ b/mobile/ios/mobile/Info.plist
@@ -71,6 +71,13 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Karla-Bold.ttf</string>
+		<string>Karla-Italic.ttf</string>
+		<string>Karla-Regular.ttf</string>
+		<string>AlegreyaSans-Regular.ttf</string>
+		<string>Gabriela-Regular.ttf</string>
+		<string>MPLUSRounded1c-Regular.ttf</string>
+		<string>Literata-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
