--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,11 +17,11 @@
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
     "mobx-react-lite": "^1.5.2",
-    "react": "16.9.0",
+    "react": "17.0.1",
     "react-final-form": "^6.3.0",
-    "react-native": "0.61.2",
+    "react-native": "0.64.0",
     "react-native-elements": "^1.2.5",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
@@ -31,19 +31,19 @@
     "react-navigation-stack": "^2.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^24.0.18",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.60.17",
     "@types/react-test-renderer": "16.9.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "7.14.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-import-resolver-babel-module": "^5.1.1",
@@ -54,9 +54,9 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.9.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1",
     "typescript": "^3.6.3"
   },
   "jest": {
