--- a/mobile/.eslintrc.yml
+++ b/mobile/.eslintrc.yml
@@ -22,6 +22,7 @@ plugins:
 rules:
   react-hooks/rules-of-hooks: error
   react-hooks/exhaustive-deps: warn
+  "@typescript-eslint/explicit-function-return-type": off
 settings:
   import/resolver:
     node:
