--- a/mobile/.eslintrc.yml
+++ b/mobile/.eslintrc.yml
@@ -3,8 +3,6 @@ env:
   es6: true
 extends:
   - '@react-native-community'
-  - 'plugin:@typescript-eslint/eslint-recommended'
-  - 'plugin:@typescript-eslint/recommended'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
@@ -22,6 +20,8 @@ plugins:
 rules:
   react-hooks/rules-of-hooks: error
   react-hooks/exhaustive-deps: warn
+  react/react-in-jsx-scope: off
+  react-hooks/exhaustive-deps: off
   "@typescript-eslint/explicit-function-return-type": off
 settings:
   import/resolver:
