--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,12 +16,16 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "final-form": "^4.18.5",
+    "intl": "^1.2.5",
+    "jsc-android": "^250230.2.1",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-final-form": "^6.3.0",
+    "react-intl": "^5.17.2",
     "react-native": "0.64.0",
-    "react-native-elements": "^1.2.5",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
