--- a/api/package.json
+++ b/api/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@koa/cors": "^2.2.1",
     "async-busboy": "^0.7.0",
+    "form-data": "^4.0.0",
     "io-ts": "^1.3.3",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "mailgun.js": "^3.5.7",
     "moment": "^2.22.2",
     "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
